# Free-Turnitin-Plagiarism-Checker

./: .gitignore  README.md  app.py  final thesis.docx  index.js  plagiarism_checker.py  pyproject.toml  render.yaml  sip report  text_extractor.py
static/css/: style.css
static/js/: app.js
templates/: index.html
